# recsys_project

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.191e31c  CMakeLists.txt.user.4b24e73  CMakeLists.txt.user.e88f785  README.md
libraries/: CMakeLists.txt
libraries/Classes/: CMakeLists.txt  movies.cpp  movies.h  user_and_dev.cpp  user_and_dev.h
libraries/Classes/logger/: logger.cpp  logger.h
libraries/Classes/movie/: movies.cpp  movies.h
libraries/Classes/users/: user_and_dev.cpp  user_and_dev.h
libraries/User_and_Dev_classes/: CMakeLists.txt  user_and_dev.cpp  user_and_dev.h
libraries/cosine_distance/: CMakeLists.txt
libraries/mysql-queries/: CMakeLists.txt  library.py  mysql-queries.cpp  mysql-queries.h
libraries/mysql-queries/mysqlenv/: pyvenv.cfg
libraries/word_to_vec/: CMakeLists.txt  word_to_vec.cpp
python/: library.py  main (версия от 02.06.2024 00:10:02).cpp  main.cpp
python/mysqlenv/: pyvenv.cfg
src/: CMakeLists.txt
src/Data/: LogFile.txt  NeLogFole.txt
src/api/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  add_sql.cpp  main.cpp
src/backend/libraries/: CMakeLists.txt
src/backend/libraries/Classes/: CMakeLists.txt
src/backend/libraries/Classes/logger/: logger.cpp
src/backend/libraries/Classes/movie/: movies.cpp  movies.h
src/backend/libraries/Classes/users/: user_and_dev.cpp  user_and_dev.h
src/backend/libraries/mysql-queries/: CMakeLists.txt  library.py  mysql-queries.cpp  mysql-queries.h
src/backend/src/: CMakeLists.txt
src/backend/src/Data/: LogFile.txt
src/backend/src/api/: CMakeLists.txt
src/backend/src/backend/: main.cpp
src/qt/: CMakeLists.txt  CMakeLists — копия.txt  PICS.qrc  backend.cpp  backend.h  check.cpp  check.h  collectionpage.cpp  collectionpage.h  collectionpage.ui  filmpage.cpp  filmpage.h  filmpage.ui  filmscollection.cpp  filmscollection.h  filmscollection.ui  firstloginsignup.cpp  firstloginsignup.h  firstloginsignup.ui  intpass.cpp  intpass.h  kidstv.cpp  kidstv.h  kidstv.ui  likedfilms.cpp  likedfilms.h  likedfilms.ui  login.cpp  login.h  login.ui  main.cpp  main_page.cpp  main_page.h  main_page.ui  mainpage.h  mainpage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pagemain.cpp  (+22 more)
src/qt/backend/: README.md
src/qt/backend/libraries/: CMakeLists.txt
src/qt/backend/libraries/Classes/logger/: logger.cpp
src/qt/backend/libraries/Classes/users/: user_and_dev.cpp  user_and_dev.h
src/qt/backend/libraries/cosine_distance/: CMakeLists.txt  cosine_distance.cpp  cosine_distance.h
src/qt/backend/libraries/mysql-queries/: mysql-queries.cpp
src/qt/backend/libraries/word_to_vec/: word_to_vec.h
src/qt/backend/src/api/: main.cpp
src/qt/backend/src/backend/: main.cpp
src/qt/backend/src/qt/: CMakeLists.txt  firstloginsignup.cpp  firstloginsignup.ui  main.cpp  mainpage.cpp  pagemain.cpp  pagemain.h  pagemain.ui  pics.qrc  scrollarea.ui
