include_directories(/opt/homebrew/Cellar/python@3.12/3.12.3/Frameworks/Python.framework/Versions/3.12/include/python3.12)

link_directories(/opt/homebrew/Cellar/python@3.12/3.12.3/Frameworks/Python.framework/Versions/3.12/lib)

add_library(mysql-queries STATIC mysql-queries.cpp)

target_include_directories(mysql-queries PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
